# agent-harness

./: .gitignore  README.md  agent-harness.gates.json  agent-harness.trust.json  pyproject.toml
.github/workflows/: ci.yml
agent_harness/: __init__.py  __main__.py  adapters.py  allocation_repair.py  capital.py  cli.py  evals.py  fixtures.py  ledger.py  outcomes.py  packets.py  platform_sync.py  promotion_gates.py  promotions.py  regimes.py  registry.py  reports.py  store.py  stress.py  trust_policy.py
docs/: production.md  trust-policy.example.json
tests/: test_adapters.py  test_allocation_repair.py  test_capital.py  test_cli.py  test_fixtures.py  test_ledger.py  test_outcomes.py  test_packets.py  test_platform_sync.py  test_promotion_gates.py  test_promotions.py  test_regimes.py  test_registry.py  test_reports.py  test_store.py  test_stress.py  test_trust_policy.py
tools/: __init__.py  build_ci_production_fixture.py  verify_research_run_platform_receiver.py
tools/patches/: research-run-platform-promotion-evidence.patch
